Downgrade to JDK 11